GNOME Bugzilla – Bug 650590
cell-renderer-expander: fix rendering with GTK+3
Last modified: 2011-05-23 13:55:49 UTC
Here's a patch that fixes some rendering issues of EmpathyCellRendererExpander with GTK+3. The commit message has a better description of the changes.
Created attachment 188129 [details] [review] cell-renderer-expander: fix rendering with GTK+3 There are basically three issues here: - the renderer doesn't add the GTK_STYLE_CLASS_EXPANDER style class when rendering, which blocks the theme to apply the intended colors. - the GtkStateFlags that were set on the context were using GTK_STATE_* instead of GTK_STATE_FLAG_* - the flags set on the context were incomplete, as they were just using ACTIVE/NORMAL for expanded/collapsed and not SELECTED/FOCUSED/...
Review of attachment 188129 [details] [review]: ++ 3.0 and master please. Thanks!
Thanks, pushed! Attachment 188129 [details] pushed as d0e556d - cell-renderer-expander: fix rendering with GTK+3