cell-renderer-expander: fix rendering with GTK+3

There are basically three issues here:
- the renderer doesn't add the GTK_STYLE_CLASS_EXPANDER style class when
  rendering, which blocks the theme to apply the intended colors.
- the GtkStateFlags that were set on the context were using GTK_STATE_*
  instead of GTK_STATE_FLAG_*
- the flags set on the context were incomplete, as they were just using
  ACTIVE/NORMAL for expanded/collapsed and not SELECTED/FOCUSED/...

https://bugzilla.gnome.org/show_bug.cgi?id=650590